<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OwlsNest</string>
    <string name="header_category">OwlsNest</string>
    <string name="title">OwlsNest</string>
    <string name="owlsnest_summary_title">Home of the Kronic</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary">@null</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="aosip_version">AOSiP version</string>
    <string name="aosip_version_default">Unknown</string>
    <string name="cpu_info">CPU</string>
    <string name="mem_info">Memory</string>
    <string name="build_date">Build date</string>
    <string name="header_category_personalization">UI settings</string>
    <string name="custom_title">OwlsNest</string>
    <string name="aosip_title">AOSiP Settings</string>
    <string name="owlsnest_settings_title">Categories</string>
    <string name="ota_title">OTA Updates</string>
    <string name="ota_summary">Check for the latest releases</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="statusbar_bar_title">Statusbar</string>
    <string name="statusbar_bar_summary">Adjust various statusbar elements</string>
    <string name="clock_category">Clock</string>
    <string name="battery_category">Battery</string>
    <string name="icon_category">Icons</string>
    <string name="traffic_category">Network Traffic</string>
    <string name="various">Various Items</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="ticker_screen_title">Ticker</string>
    <string name="ticker_title">Status Bar Ticker</string>
    <string name="ticker_screen_summary">Customize the ticker style</string>
    <string name="ticker_summary">Enable the old status bar ticker</string>
    <string name="ticker_restore_defaults_title">Restore defaults</string>
    <string name="ticker_disabled">No ticker</string>
    <string name="ticker_enabled">Notification ticker</string>
    <string name="ticker_media_enabled">Notifications and music ticker</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="status_bar_icon_blacklist_title">Status bar icons</string>
    <string name="status_bar_icon_blacklist_summary">Configure what icons are shown on status bar</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="status_bar_show_clock_title">Show clock and date</string>
    <string name="status_bar_clock_seconds_title">Show seconds</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="left_clock">Left clock</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_am_pm_date_normal">Normal</string>
    <string name="clock_am_pm_date_small">Small</string>
    <string name="clock_am_pm_date_none">Hidden</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_no_navbar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_charging_color">Battery bar charging color</string>
    <string name="battery_bar_battery_low_color">Battery bar low battery color</string>
    <string name="battery_bar_cat">Battery bar style</string>
    <string name="battery_bar_style_title">Battery bar alignment</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_style_regular">Regular</string>
    <string name="battery_bar_style_center_mirrored">Center-mirrored</string>
    <string name="battery_bar_style_reversed">Reversed</string>
    <string name="battery_bar_use_charging_color">Custom charging color</string>
    <string name="battery_bar_blend_color_title">Blend colors</string>
    <string name="battery_bar_blend_color_summary">Blend full/empty colors corresponding to battery percentage</string>
    <string name="battery_bar_blend_color_reverse_title">Reverse color direction</string>
    <string name="battery_bar_blend_color_reverse_summary_off">Full &#8594; empty: red &#8592; green &#8592; blue &#8592; red</string>
    <string name="battery_bar_blend_color_reverse_summary_on">Full &#8594; empty: red &#8594; green &#8594; blue &#8594; red</string>
    <string name="carrier_label_settings_title">Carrier Label</string>
    <string name="carrier_label_settings_summary">Customize the carrier label</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="show_carrier_disabled">Disabled</string>
    <string name="show_carrier_keyguard">Lockscreen only</string>
    <string name="show_carrier_statusbar">Statusbar only</string>
    <string name="sb_custom_logos">Custom Icons</string>
    <string name="custom_logo_style"> Logos</string>
    <string name="custom_logos">Take your Pick</string>
    <string name="show_custom_logo_title">Show Custom Logo</string>
    <string name="show_custom_logo_summary">Show Logos in Statusbar from a range of icons</string>
    <string name="custom_logo_color">Color</string>
    <string name="custom_logo_position">Position</string>
    <string name="statusbar_weather_title">Status bar weather</string>
    <string name="statusbar_weather_dialog_title">Status bar weather style</string>
    <string name="roaming_indicator_icon_title">Show roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="notification_title">Notification</string>
    <string name="breathing_notifications_category">Breathing Notifications</string>
    <string name="power_notification_title">Power notification controls</string>
    <string name="power_notification_summary">Advanced notification controls and information</string>
    <string name="missed_call_breath_title">Breathing Missed Call</string>
    <string name="missed_call_breath_summary">Will give your missed call notifications a breathing effect in the statusbar</string>
    <string name="voicemail_breath_title">Breathing Voicemail</string>
    <string name="voicemail_breath_summary">Will give your voicemail notifications a breathing effect in the statusbar</string>
    <string name="sms_breath_title">Breathing SMS</string>
    <string name="sms_breath_summary">Will give your SMS notifications a breathing effect in the statusbar</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="quicksettings_summary">Manage your qs tiles and expanded statusbar</string>
    <string name="navigation_title">Navigation</string>
    <string name="navigation_summary">Customize navigation bar style and behavior</string>
    <string name="buttons_title">Hardware Buttons</string>
    <string name="buttons_summary">Tweak the actions of your devices physical buttons</string>
    <string name="recent_title">Recents</string>
    <string name="recent_summary">Configure which recents style and options</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="lockscreen_summary">Customize lockscreen layout and options</string>
    <string name="options_category">Various</string>
    <string name="lockscreen_secure_options_title">Secure lockscreen options</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="fp_unlock_keystore_title">Fingerprint unlock after reboot</string>
    <string name="fp_unlock_keystore_summary">Allow device to always be unlocked with fingerprint, even after reboot</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="lockscreen_enable_power_menu_title">Show power menu lock screen</string>
    <string name="lockscreen_enable_power_menu_summary">This option will only disable the power menu on secure lock screens</string>
    <string name="advanced_title">Advanced Settings</string>
    <string name="advanced_summary">Misc and extra system settings</string>
    <string name="system_category">System Settings</string>
    <string name="screenshot_delay_title">Screenshot delay</string>
    <string name="screenshot_delay_summary">Adjust the time for when a screenshot is captured</string>
    <string name="screen_record_chord_title">Power + volume up behavior</string>
    <string name="owlsnest_settings_summary_title">Custom AOSiP summary text</string>
    <string name="dnd_when_call_title">In-call do not disturb</string>
    <string name="dnd_when_call_summary">Auto enable DND during calls</string>
    <string name="media_scanner_on_boot_title">MediaScanner behavior on boot</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="screenshot_crop_and_share_title">Screenshot crop &amp; share</string>
    <string name="screenshot_crop_and_share_summary">Show an editor window after taking a screenshot in order to do some operations like cropping, saving or sharing it</string>
    <string name="notification_guts_kill_app_button_title">Kill app button</string>
    <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
</resources>