<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:layout="@layout/tab_ui"
    android:title="@string/notification_title" >

        <PreferenceScreen
               android:title="@string/power_notification_title"
               android:summary="@string/power_notification_summary">
            <intent android:action="android.intent.action.MAIN"
               android:targetPackage="com.android.systemui"
               android:targetClass="com.android.systemui.tuner.PowerNotificationControlsActivity" />
        </PreferenceScreen>

    <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
        android:key="notification_guts_kill_app_button"
        android:title="@string/notification_guts_kill_app_button_title"
        android:summary="@string/notification_guts_kill_app_button_summary" />

    <PreferenceCategory
        android:key="breathing_notifications"
        android:title="@string/breathing_notifications_category">

    <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
        android:key="missed_call_breath"
        android:title="@string/missed_call_breath_title"
        android:summary="@string/missed_call_breath_summary"
        android:persistent="false"/>

    <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
        android:key="voicemail_breath"
        android:title="@string/voicemail_breath_title"
        android:summary="@string/voicemail_breath_summary"
        android:persistent="false"/>

    <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
        android:key="sms_breath"
        android:title="@string/sms_breath_title"
        android:summary="@string/sms_breath_summary"
        android:persistent="false"/>
    </PreferenceCategory>

</PreferenceScreen>

