<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:layout="@layout/tab_ui"
    android:title="@string/options_category" >

         <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/media_art_title"
            android:summary="@string/media_art_summary"
            android:defaultValue="true" />

         <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
            android:key="lockscreen_battery_info"
            android:title="@string/lockscreen_battery_info_title"
            android:summary="@string/lockscreen_battery_info_summary"
            android:defaultValue="false" />

     <PreferenceCategory
         android:key="lockscreen_secure_options"
         android:title="@string/lockscreen_secure_options_title" >

         <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
            android:key="fp_unlock_keystore"
            android:title="@string/fp_unlock_keystore_title"
            android:summary="@string/fp_unlock_keystore_summary"
            android:defaultValue="false" />

         <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:defaultValue="true" />

         <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
            android:key="lockscreen_enable_power_menu"
            android:title="@string/lockscreen_enable_power_menu_title"
            android:summary="@string/lockscreen_enable_power_menu_summary"
            android:defaultValue="true" />

     </PreferenceCategory>

</PreferenceScreen>

