<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:layout="@layout/tab_ui"
    android:title="@string/icon_category" >

    <PreferenceScreen
            android:title="@string/status_bar_icon_blacklist_title"
            android:summary="@string/status_bar_icon_blacklist_summary" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.TunerActivity" />
    </PreferenceScreen>

     <PreferenceCategory
        android:key="pref_cat_various"
        android:title="@string/various">

     <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
        android:key="data_disabled_icon"
        android:title="@string/data_disabled_icon_title"
        android:summary="@string/data_disabled_icon_summary"
        android:defaultValue="true"/>

     <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
        android:key="roaming_indicator_icon"
        android:title="@string/roaming_indicator_icon_title"
        android:summary="@string/roaming_indicator_icon_summary"
        android:defaultValue="true"/>

    <ListPreference
        android:key="status_bar_weather"
        android:title="@string/statusbar_weather_title"
        android:dialogTitle="@string/statusbar_weather_dialog_title"
        android:entries="@array/status_bar_weather_entries"
        android:entryValues="@array/status_bar_weather_values" />

     <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
        android:key="status_bar_notif_count"
        android:title="@string/status_bar_notif_count_title"
        android:summary="@string/status_bar_notif_count_summary"
        android:persistent="false" />

     </PreferenceCategory>

</PreferenceScreen>

