<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:layout="@layout/tab_ui"
    android:title="@string/battery_bar_title" >

    <ListPreference
        android:key="battery_bar_list"
        android:title="@string/battery_bar"
        android:entries="@array/battery_bar_entries"
        android:entryValues="@array/battery_bar_values" />

    <ListPreference
        android:key="battery_bar_no_navbar_list"
        android:title="@string/battery_bar_no_navbar"
        android:entries="@array/battery_bar_no_navbar_entries"
        android:entryValues="@array/battery_bar_no_navbar_values" />

    <ListPreference
        android:key="battery_bar_style"
        android:title="@string/battery_bar_style_title"
        android:entries="@array/battery_bar_style_entries"
        android:entryValues="@array/battery_bar_style_values" />

    <ListPreference
        android:key="battery_bar_thickness"
        android:title="@string/battery_bar_thickness_title"
        android:entries="@array/battery_bar_thickness_entries"
        android:entryValues="@array/battery_bar_thickness_values" />

    <SwitchPreference
        android:key="battery_bar_animate"
        android:title="@string/battery_bar_animate_title" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="battery_bar_color"
        android:title="@string/battery_bar_color"
        android:defaultValue="0xffffffff" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="battery_bar_battery_low_color"
        android:title="@string/battery_bar_battery_low_color"
        android:defaultValue="0xffffffff" />

    <com.aosip.owlsnest.preference.SecureSettingSwitchPreference
        android:key="battery_bar_enable_charging_color"
        android:title="@string/battery_bar_use_charging_color"
        android:defaultValue="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="battery_bar_charging_color"
        android:title="@string/battery_bar_charging_color"
        android:defaultValue="0xffffffff"
        android:dependency="battery_bar_enable_charging_color" />

    <com.aosip.owlsnest.preference.SecureSettingSwitchPreference
        android:key="battery_bar_blend_color"
        android:title="@string/battery_bar_blend_color_title"
        android:summary="@string/battery_bar_blend_color_summary"
        android:defaultValue="false" />

    <com.aosip.owlsnest.preference.SecureSettingSwitchPreference
        android:key="battery_bar_blend_color_reverse"
        android:title="@string/battery_bar_blend_color_reverse_title"
        android:summaryOn="@string/battery_bar_blend_color_reverse_summary_on"
        android:summaryOff="@string/battery_bar_blend_color_reverse_summary_off"
        android:dependency="battery_bar_blend_color"
        android:defaultValue="false" />

</PreferenceScreen>

