<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:layout="@layout/tab_ui"
    android:title="@string/system_category" >

       <Preference
            android:key="aosip_settings_summary"
            android:title="@string/owlsnest_settings_summary_title" />

         <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
            android:key="dnd_when_call"
            android:title="@string/dnd_when_call_title"
            android:summary="@string/dnd_when_call_summary" />

        <ListPreference
             android:key="media_scanner_on_boot"
             android:title="@string/media_scanner_on_boot_title"
             android:entries="@array/media_scanner_on_boot_entries"
             android:entryValues="@array/media_scanner_on_boot_values"
             android:persistent="false" />

         <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
            android:key="screenshot_crop_and_share"
            android:title="@string/screenshot_crop_and_share_title"
            android:summary="@string/screenshot_crop_and_share_summary"
            android:defaultValue="false" />

        <ListPreference
             android:key="screenrecord_chord_type"
             android:title="@string/screen_record_chord_title"
             android:entries="@array/screen_record_chord_entries"
             android:entryValues="@array/screen_record_chord_values" />

         <com.aosip.owlsnest.preference.CustomSeekBarPreference
             android:key="screenshot_delay"
             android:title="@string/screenshot_delay_title"
             android:summary="@string/screenshot_delay_summary"
             settings:max="10000"
             settings:min="100"
             settings:interval="100"
             settings:units="ms"
             android:persistent="false" />

        <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
            android:key="toast_icon"
            android:title="@string/toast_icon_title"
            android:summary="@string/toast_icon_summary"
            android:defaultValue="false" />]

</PreferenceScreen>

