<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2015 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:layout="@layout/tab_ui"
    android:title="@string/sb_custom_logos" >

    <PreferenceCategory
        android:key="custom_logo_cat"
        android:title="@string/sb_custom_logos" />

    <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
            android:key="show_custom_logo"
            android:title="@string/show_custom_logo_title"
            android:summary="@string/show_custom_logo_summary"
            android:defaultValue="false" />

    <ListPreference
           android:key="custom_logo_position"
           android:title="@string/custom_logo_position"
           android:dialogTitle="@string/custom_logo_position"
           android:entries="@array/custom_logo_position_entries"
           android:entryValues="@array/custom_logo_position_values"
           android:dependency="show_custom_logo" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="custom_logo_color"
            android:title="@string/custom_logo_color"
            android:defaultValue="0xffffffff"
            android:dependency="show_custom_logo" />

    <ListPreference
           android:key="custom_logo_style"
           android:title="@string/custom_logo_style"
           android:dialogTitle="@string/custom_logos"
           android:entries="@array/custom_logo_entries"
           android:entryValues="@array/custom_logo_values"
           android:dependency="show_custom_logo" />

</PreferenceScreen>
